--- a/src/main/webapp/res/admin/my/css/span.css
+++ b/src/main/webapp/res/admin/my/css/span.css
@@ -1,7 +1,7 @@
 .label.radius {
     border-radius: 3px;
 }
-.label, .badge {
+.label{
     display: inline-block;
     padding: 2px 4px;
     font-size: 11.844px;
@@ -13,6 +13,12 @@
     background-color: #999;
     overflow: hidden;
 }
-.label-success, .badge-success {
+.label-success{
     background-color: #5eb95e;
+}
+.label-editing{
+    background-color: #1AA094;
+}
+.label-aduiting{
+    background-color: #629FDF;
 }
