--- a/src/main/webapp/res/admin/my/css/span.css
+++ b/src/main/webapp/res/admin/my/css/span.css
@@ -22,3 +22,14 @@
 .label-aduiting{
     background-color: #629FDF;
 }
+.label-releaseing{
+    background-color: #277CE5;
+}
+.label-soldouted{
+    background-color: #4F5C65;
+}
+.label-failed{
+    background-color: #F45438;
+}
+
+
